2006-08-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/Makefile.in (Z80SOURCES): enabled float support
	* sim/ucsim/z80.src/inst.cc (inst_rst): generate breakpoint on RST8,ACC==0
	* src/ds390/gen.c (shiftRLong),
	* src/hc08/gen.c (shiftLLong, shiftRLong): fixed bug 1533966
	* src/mcs51/gen.c (sameReg): changed to sameByte,
	  (xch_a_aopGet): new,
	  (shiftL2Left2Result, shiftR2Left2Result, shiftRLeftOrResult, shiftLLong,
	   shiftRLong): fixed bug 1533966
	* src/z80/gen.c (shiftR2Left2Result, shiftL2Left2Result, genlshTwo,
	  genLeftShiftLiteral, genrshTwo, genRightShiftLiteral): fixed bug 1533966
	* support/regression/Makefile.in: disabled z80, enabled ucz80
	* support/regression/tests/float_trans.c: enabled test for z80 and host
	* support/regression/tests/shifts2.c: new, for testing bug 1533966

2006-08-01 Borut Razem <borut.razem AT siol.net>

	* src/mcs51/gen.c, src/dc390/gen.c: fixed warning:
	  comparison is always false due to limited range of data type
	  on PPC64 machine (openpower-linux1) where "char = unsigned char"

2006-08-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* sim/ucsim/hc08.src/hc08mac.h: removed faulty and unused add_u16_disp
	* sim/ucsim/hc08.src/hc08.cc: removed faulty and unused int8
	* sim/ucsim/z80.src/z80mac.h (add_u16_disp): use explicit signed char cast
	* sim/ucsim/z80.src/z80.cc: removed faulty and unused int8

2006-07-31 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/configure, sim/ucsim/cmd.src/newcmdcl.h,
	  sim/ucsim/cmd.src/newcmd.cc, sim/ucsim/cmd.src/cmdutil.cc,
	  sim/ucsim/z80.src/Makefile.in, sim/ucsim/configure.in,
	  sim/ucsim/hc08.src/Makefile.in, sim/ucsim/hc08.src/hc08.cc,
	  sim/ucsim/ddconfig_in.h, sim/ucsim/s51.src/Makefile.in,
	  sim/ucsim/s51.src/uc51cl.h, sim/ucsim/s51.src/serialcl.h,
	  sim/ucsim/s51.src/uc51.cc, sim/ucsim/s51.src/serial.cc,
	  sim/ucsim/app.cc, sim/ucsim/avr.src/Makefile.in:
	  enable ucsim mingw compilation. Serial port is disabled,